<resources>
    <string name="app_name">Exercise_one</string>
    <string name="what_type_of_coffee">What type of Coffee?</string>
    <string name="decaf">Decaf</string>
    <string name="espresso">Espresso</string>
    <string name="columbia">Columbian</string>
    <string name="what_else_in_your_coffee">What else in your Coffee?</string>
    <string name="sugar">Sugar</string>
    <string name="pay">Pay</string>
    <string name="cream">Cream</string>
    <string name="to_relative_layout_design">To Relative Layout Design</string>
    <string name="to_linear_layout_design">to linear layout design</string>
    <string name="ex1">EX1 WITH LINEAR LAYOUT</string>
    <string name="ex2">EX1 WITH RELATIVE LAYOUT</string>
</resources>