<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/coffee_type"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_type_of_coffee"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_dark" />

    <RadioGroup
        android:id="@+id/rad_group"
        android:layout_below="@+id/coffee_type"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rad_decaf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:text="@string/decaf"/>
        <RadioButton
            android:id="@+id/rad_espresso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:text="@string/espresso"/>
        <RadioButton
            android:id="@+id/rad_columbian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:text="@string/columbia"/>
    </RadioGroup>

    <TextView
        android:id="@+id/what_else"
        android:layout_below="@+id/rad_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_else_in_your_coffee"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_dark" />

    <CheckBox
        android:id="@+id/check1"
        android:layout_below="@+id/what_else"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/white"
        android:textColor="@android:color/white"
        android:text="@string/cream" />
    <CheckBox
        android:id="@+id/check2"
        android:layout_below="@+id/check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:buttonTint="@android:color/white"
        android:textColor="@android:color/white"
        android:text="@string/sugar" />

    <Button
        android:layout_below="@+id/check2"
        android:id="@+id/payBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay" />

    <Button
        android:id="@+id/toLinear"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_linear_layout_design" />
</RelativeLayout>